--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* @layer components{
+    .Icons{
+        @apply w-16 h-16 bg-black bg-opacity-20 text-gray-500 text-xl inline-flex justify-center
+         items-center hover:-translate-y-1 translate-all
+         rounded-md shadow-shadowOne hover:text-designColor cursor-pointer duration-300;
+    }
+} */
+
+.active{
+    color: white;
+}
